Combined all files and added staff login/out

--- a/DefaultPage/DefaultPage.csproj
+++ b/DefaultPage/DefaultPage.csproj
@@ -113,6 +113,14 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <None Include="Connected Services\SOAPServicesLikhit\Service1.wsdl" />
+    <None Include="Connected Services\SOAPServicesLikhit\SOAPServicesLikhit.disco" />
+    <None Include="Connected Services\SOAPServicesLikhit\configuration91.svcinfo" />
+    <None Include="Connected Services\SOAPServicesLikhit\configuration.svcinfo" />
+    <None Include="Connected Services\SOAPServicesLikhit\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -169,6 +177,15 @@
     <None Include="Connected Services\ServiceReference1\Service11.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Connected Services\SOAPServicesLikhit\SOAPServicesLikhit.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\SOAPServicesLikhit\SOAPServicesLikhit1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\SOAPServicesLikhit\SOAPServicesLikhit2.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -196,6 +213,7 @@
     <Content Include="Scripts\WebForms\WebForms.js" />
     <Content Include="Scripts\WebForms\WebParts.js" />
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
+    <Content Include="StaffLogin.aspx" />
     <Content Include="SignUp.aspx" />
     <Content Include="Site.Master" />
     <Content Include="UserControls\SignUpCaptcha.ascx" />
@@ -219,6 +237,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Connected Services\SOAPServicesLikhit\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -237,6 +260,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaffLogin.aspx.cs">
+      <DependentUpon>StaffLogin.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="StaffLogin.aspx.designer.cs">
+      <DependentUpon>StaffLogin.aspx</DependentUpon>
+    </Compile>
     <Compile Include="SignUp.aspx.cs">
       <DependentUpon>SignUp.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -295,6 +325,7 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\ServiceReference1\" />
+    <WCFMetadataStorage Include="Connected Services\SOAPServicesLikhit\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="dll\" />
