--- a/DefaultPage/bin/DefaultPage.dll.config
+++ b/DefaultPage/bin/DefaultPage.dll.config
@@ -49,12 +49,16 @@
     <bindings>
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IService1" />
+        <binding name="BasicHttpBinding_ISOAPServicesLikhit" />
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="http://webstrar51.fulton.asu.edu/Page0/Service1.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
         contract="ServiceReference1.IService1" name="BasicHttpBinding_IService1" />
+      <endpoint address="http://webstrar51.fulton.asu.edu/Page6/SOAPServicesLikhit.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISOAPServicesLikhit"
+        contract="SOAPServicesLikhit.ISOAPServicesLikhit" name="BasicHttpBinding_ISOAPServicesLikhit" />
     </client>
   </system.serviceModel>
   <system.codedom>
